--- a/index.html
+++ b/index.html
@@ -9,27 +9,26 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </head>
 
-<body>
-
+<body style="background-color:rgb(143, 180, 176)">
   <div class="container">
     <div class="row">
-      <div class="col-md-12 jumbotron text-center">
-        <h1>Belly Button Biodiversity Dashboard</h1>
-        <p>Use the interactive charts below to explore the dataset</p>
+      <div class="col-md-12 jumbotron text-center", style=" background-image: url('https://media.wired.co.uk/photos/606da8809a15f73a597a1f76/master/w_960,c_limit/Navelgazing.jpg')">
+        <h1 style="color:rgb(143, 180, 176)">Belly Button Biodiversity Dashboard</h1>
+        <p style="color:beige"> Use the interactive charts below to explore the dataset</p>
       </div>
     </div>
     <div class="row">
       <div class="col-md-2">
         <div class="well">
-          <h5>Test Subject ID No.:</h5>
+          <h5 style="color:rgb(102, 135, 121)">Test Subject ID No.:</h5>
           <!-- <select id="selDataset"></select> -->
           <select id="selDataset" onchange="optionChanged(this.value)"></select>
         </div>
         <div class="panel panel-primary">
           <div class="panel-heading">
-            <h3 class="panel-title">Demographic Info</h3>
+            <h3 class="panel-title" style="color: white">Demographic Info</h3>
           </div>
-          <div id="sample-metadata" class="panel-body"></div>
+          <div id="sample-metadata" class="panel-body" style="color: white; background-color: rgb(69, 79, 75)"></div>
         </div>
       </div>
       <div class="col-md-5">
@@ -48,7 +47,7 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-  <script src="charts.js"></script>
+  <script src="chart.js"></script>
 
 </body>
 
